# ogon-greeter-qt

./: .gitignore  CMakeLists.txt  README.md  abstract_greeter.cpp  abstract_greeter.h  build.sh  greeter_de.ts  greeter_en.ts  greeter_fr.ts  lowres_greeter.cpp  lowres_greeter.h  main.cpp  nice_greeter.cpp  nice_greeter.h  ogon_qt_greeter.qrc
cmake/: FindProtobufCPP.cmake  FindQT5.cmake
doc/: SCOPES.md
forms/: nice_greeter.ui  small_greeter.ui
packaging/rpm/: ogon-qt-greeter.spec
